# Sistemas-Computacionais-Distribu-dos---Projeto

./: .gitignore  README.md  database.sql  package-lock.json  pyproject.toml
SQL/: docker-compose.yml
hooks/: pre-commit
monitoring/grafana/dashboards/: backend.json  kafka.json  node.json  postgres.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/prometheus/: prometheus.yml
scripts/: docker-compose.yml  init-db.sh  install.sh
web-app/: package-lock.json  package.json
web-app/src/: App.css  App.js
web-app/src/components/QuantitySelector/: QuantitySelector.css  QuantitySelector.jsx
web-app/src/components/SearchBar/: SearchBar.css  SearchBar.jsx
web-app/src/components/SellButton/: SellButton.css  SellButton.jsx
web-app/src/components/Table/: Table.css  Table.jsx
web-app/src/pages/: LogPage.jsx
